Add initial files

--- a/css/small.css
+++ b/css/small.css
@@ -13,4 +13,8 @@
 #team .jumbotron .card-body {
   height: 120px;
 }
+
+#contact .jumbotron .contact-item h3 {
+  font-size: 28px;
+}
 /*# sourceMappingURL=small.css.map */
