--- a/sass/small.sass
+++ b/sass/small.sass
@@ -13,3 +13,9 @@
     .jumbotron
         .card-body
             height: 120px
+
+#contact
+    .jumbotron
+        .contact-item
+            h3
+                font-size: 28px
