--- a/css/main.css
+++ b/css/main.css
@@ -362,6 +362,67 @@ header .fa-angle-down {
   color: #727272;
 }
 
+#contact .jumbotron {
+  position: relative;
+  z-index: 0;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: url("../img/japan-2014619_1280.jpg");
+  color: #fff;
+}
+
+#contact .jumbotron .hero-bg {
+  background-color: rgba(0, 0, 0, 0.45);
+}
+
+#contact .jumbotron h2 {
+  font-weight: bold;
+}
+
+#contact .jumbotron .underline {
+  background-color: #fff;
+}
+
+#contact .jumbotron a {
+  color: #fff;
+}
+
+#contact .jumbotron .contact-us {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#contact .jumbotron .contact-item h3 {
+  text-transform: uppercase;
+  font-size: 25px;
+  margin: 30px 0 20px;
+}
+
+#contact .jumbotron .contact-item p {
+  font-size: 16px;
+}
+
+#contact .jumbotron .contact-item i {
+  padding: 15px 20px;
+  font-size: 27px;
+}
+
+footer {
+  color: #9c9c9c;
+  text-align: center;
+}
+
+footer p {
+  padding: 20px 0;
+  margin: 0;
+}
+
 @media (min-width: 414px) {
   #aboutus-creation .jumbotron {
     padding: 70px 0;
@@ -387,6 +448,15 @@ header .fa-angle-down {
   }
   #achievments .jumbotron p {
     font-size: 15px;
+  }
+  #contact .jumbotron .contact-item h3 {
+    font-size: 26px;
+  }
+  #contact .jumbotron .contact-item p {
+    font-size: 18px;
+  }
+  #contact .jumbotron .contact-item i {
+    font-size: 30px;
   }
 }
 /*# sourceMappingURL=main.css.map */
