--- a/sass/main.sass
+++ b/sass/main.sass
@@ -287,6 +287,52 @@ header
             font-size: 14px
             color: #727272
 
+//Section contact
+#contact
+    .jumbotron
+        @include bg-shadow
+        background-image: url('../img/japan-2014619_1280.jpg')
+        color: #fff
+
+        .hero-bg
+            background-color: rgba(0,0,0,.45)
+
+        h2
+            font-weight: bold
+        
+        .underline
+            background-color: #fff
+
+        a
+            color: #fff
+
+        .contact-us
+            display: flex
+            align-items: center
+
+        .contact-item
+            h3
+                text-transform: uppercase
+                font-size: 25px
+                margin: 30px 0 20px
+
+            p
+                font-size: 16px
+
+            i
+                padding: 15px 20px
+                font-size: 27px
+
+//footer
+footer
+    color: #9c9c9c
+    text-align: center
+
+    p
+        padding: 20px 0
+        margin: 0
+
+
 @media (min-width: 414px)
     #aboutus-creation
         .jumbotron
@@ -318,3 +364,15 @@ header
 
             p
                 font-size: 15px
+
+    #contact
+        .jumbotron
+            .contact-item
+                h3
+                    font-size: 26px
+
+                p
+                    font-size: 18px
+
+                i
+                    font-size: 30px
